--- a/Assignment7/Views/Shared/_Layout.cshtml
+++ b/Assignment7/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="VehicleEntryExitManagement" asp-action="VehicleEntryExitManagement">VehicleEntryExitManagement</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="productionstatus" asp-action="productionstatus">productionstatus</a>
+                        </li>
                     </ul>
                 </div>
             </div>
