completed production flow plan

--- a/Assignment7/Views/VehicleEntryExitManagement/VehicleEntryExitManagement.cshtml
+++ b/Assignment7/Views/VehicleEntryExitManagement/VehicleEntryExitManagement.cshtml
@@ -609,7 +609,7 @@
                             </div>
                             <div class="col-md-6">
                                 <label class="form-label">Category (Auto-determined)</label>
-                                <input type="text" id="categoryResult" class="form-control" readonly>
+                                <input type="text" id="categoryResult" class="form-control" />
                             </div>
                         </div>
                         <div class="mt-3">
