--- a/Assignment7/Views/Shared/_Layout.cshtml
+++ b/Assignment7/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="VehicleEntryExitManagement" asp-action="VehicleEntryExitManagement">VehicleEntryExitManagement</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="GodavantoPrecleaning" asp-action="GodavantoPrecleaning">GodavantoPrecleaning</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="productionstatus" asp-action="productionstatus">productionstatus</a>
                         </li>
                     </ul>
