--- a/Assignment7/Views/Shared/_Layout.cshtml
+++ b/Assignment7/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="productionstatus" asp-action="productionstatus">productionstatus</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SalesDispatch" asp-action="SalesDispatch">SalesDispatch</a>
+                        </li>
                     </ul>
                 </div>
             </div>
