added multilpe items adding fetture in sales

--- a/Assignment7/Views/Shared/_Layout.cshtml
+++ b/Assignment7/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="VehicleEntryExitManagement" asp-action="VehicleEntryExitManagement">VehicleEntryExitManagement</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="GodowntoPrecleaning" asp-action="GodowntoPrecleaning">GodowntoPrecleaning</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="GodavantoPrecleaning" asp-action="GodavantoPrecleaning">GodowntoPrecleaning</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="productionstatus" asp-action="productionstatus">productionstatus</a>
